* Resolve namespaces on interwiki Title objects using canonical namespace names
  if possible (should not happen, though, outside interwiki transclusion... and
  maybe not even then, but it does)
* (bug 8447) Fix SQL typo breaking non-default $wgHitcounterUpdateFreq
* Do not allow previews of deleted images to be cached

== Languages updated ==

* Basque (eu)
* Bishnupriya Manipuri (bpy)
* Cantonese (zh-yue)
* Finnish (fi)
* Frisian (fy)
* German (de)
* Hebrew (he)
* Indonesian (id)
* Italian (it)
* Japanese (ja)
* Kazakh (kk)
* Kongo (kg)
* Latin (la)
* Limburgish (li)
* Lingala (ln)
* Lithuanian (lt)
* Norwegian (no)
* Occitan (oc)
* Old Church Slavonic (cu)
* Polish (pl)
* Portuguese (pt)
* Russian (ru)
* Slovak (sk)
* Swedish (sv)
* Taiwanese/Holo: (bug 8217) changed language code to nan (from zh-min-nan)
  due to http://www.sil.org/iso639-3/codes.asp?order=639_3&letter=n
* Upper Sorbian (hsb)
* Vietnamese (vi)

== Compatibility ==

MediaWiki 1.9 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

Some minor database changes have been made since 1.7:
* new fields and indexes on ipblocks
* index change on recentchanges

Several changes from 1.5 and 1.6 do require updates to be run on upgrade.
To ensure that these tables are filled with data, run refreshLinks.php after
the upgrade.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.



=== Caveats ===
