@@ -443,6 +443,10 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   maybe not even then, but it does)
 * (bug 8447) Fix SQL typo breaking non-default $wgHitcounterUpdateFreq
 * Do not allow previews of deleted images to be cached
+* Add global variable $wgDefaultLanguageVariant used to set the default language 
+  variant of a wiki to something different than the main language code
+* Add 'variant' option to parserTests - runs test with the given variant as 
+  preferred, utilize it for more parser tests of language variants code
 
 == Languages updated ==
 
